--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>cloud-provider-payment8001</module>
+        <module>cloud-consumer-order80</module>
+        <module>cloud-api-commons</module>
     </modules>
 
     <!-- 统一管理jar包版本 -->
@@ -84,6 +86,8 @@
                 <version>${lombok.version}</version>
                 <optional>true</optional>
             </dependency>
+
+
         </dependencies>
     </dependencyManagement>
 
@@ -99,5 +103,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
