--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>cloud-providerconsul-payment8006</module>
         <module>cloud-consumer-openfeign-order80</module>
         <module>cloud-provider-hystrix-payment8001</module>
+      <module>cloud-consumer-openfeign-hystrix-order80</module>
     </modules>
 
     <!-- 统一管理jar包版本 -->
