整合网关&配置中心

--- a/cloud-consumer-openfeign-hystrix-order80/src/main/resources/application.yml
+++ b/cloud-consumer-openfeign-hystrix-order80/src/main/resources/application.yml
@@ -16,10 +16,12 @@ eureka:
       defaultZone: http://eureka7001.com:7001/eureka/
 
 
-
+feign:
+  hystrix:
+    enabled: true
 
 #超时等待
-ribbon:
-  ReadTimeout:  5000
-  ConnectTimeout: 5000
+  #ribbon:
+  #ReadTimeout:  5000
+  #ConnectTimeout: 5000
 
