--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <module>cloud-consumer-openfeign-order80</module>
         <module>cloud-provider-hystrix-payment8001</module>
       <module>cloud-consumer-openfeign-hystrix-order80</module>
+      <module>cloud-sc-gateway9527</module>
+      <module>cloud-config-center3344</module>
     </modules>
 
     <!-- 统一管理jar包版本 -->
