--- a/cloud-config-center3344/src/main/resources/application.yml
+++ b/cloud-config-center3344/src/main/resources/application.yml
@@ -9,10 +9,23 @@ spring:
         git:
           uri:  https://github.com/hinzzz/spring-config.git
           search-paths:
-            - springcloud-config
+            - springcloud-config #git仓库地址下的相对地址 多个用逗号","分割
       label: master
 eureka:
   client:
     service-url:
       defaultZone:  http://localhost:7001/eureka
 
+
+
+##rabbitmq相关配置,暴露bus刷新配置的端点
+rabbitmq:
+  host: localhost
+  port: 5672
+  username: guest
+  password: guest
+management:
+  endpoints:
+    web:
+      exposure:
+        include: 'bus-refresh'
