--- a/cloud-config-client3366/pom.xml
+++ b/cloud-config-client3366/pom.xml
@@ -9,19 +9,19 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>cloud-config-center3344</artifactId>
+  <artifactId>cloud-config-client3366</artifactId>
+
 
   <dependencies>
-
+    <!--添加消息总线RabbitMQ支持-->
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-bus-amqp</artifactId>
     </dependency>
 
-
     <dependency>
       <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-config-server</artifactId>
+      <artifactId>spring-cloud-starter-config</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
@@ -60,5 +60,6 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
 
 </project>
