--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,11 @@
       <module>cloud-sc-gateway9527</module>
       <module>cloud-config-center3344</module>
       <module>cloud-config-client3355</module>
-        <module>cloud-center-client3366</module>
         <module>cloud-config-client3366</module>
+        <module>cloud-stream-rabbitmq-provider8801</module>
+        <module>cloud-stream-rabbitmq-comsumer8802</module>
+        <module>cloud-stream-rabbitmq-consumer8803</module>
+
 
     </modules>
 
